fix links on mobile, further mobile style

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main {
   display: grid;
   height: 100vh;
   grid-template:
-  "header" 10rem
+  "header" 8em
   "canvas" auto
   / 1fr
 }
@@ -54,9 +54,10 @@ main {
 }
 
 .door {
-  height: 16rem;
-  width: 8rem;
-  background: white;
+  height: 5rem;
+  width: 10rem;
+  margin: .25rem;
+  background: transparent;
   border: .2rem solid black;
   border-radius: .75rem;
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
@@ -65,6 +66,8 @@ main {
 
 .door > canvas {
     border-radius: .60rem;
+    position: relative;
+    z-index: -1;
 }
 
 .portalDoor {
@@ -111,6 +114,15 @@ a:hover {
 
 .portals > a {
   cursor: help;
+  position: relative;
+  z-index: 100;
+}
+
+@media only screen and (min-width: 360px) {
+  .door {
+    height: 15rem;
+    width: 8rem; 
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -118,16 +130,21 @@ a:hover {
     display: grid;
     grid-template:
     "header canvas" 1fr
-    /2fr 5fr 
+    /3fr 5fr 
+  }
+
+  .door {
+    height: 22rem;
+    width: 12.5rem; 
   }
 
   .title {
-    font-size: 3rem;
+    font-size: 4rem;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
   .title {
-    font-size: 4rem
+    font-size: 6rem
   }
 }
-
